overflow fix

--- a/public/style.css
+++ b/public/style.css
@@ -50,7 +50,7 @@ h4 {
 #queue,
 #search-box {
   height: 250px;
-  overflow: scroll
+  overflow-y: scroll
 }
 
 .title {
